# pathfinding-algorithms

./: .gitignore  API.md  CMakeLists.txt  README.md  build.sh
docs/: factory_euclidean_best_solution.pgm  factory_euclidean_high_quality_solution.pgm  factory_manhattan_best_solution.pgm  factory_manhattan_high_quality_solution.pgm  willow_euclidean_best_solution.pgm  willow_euclidean_high_quality_solution.pgm  willow_manhattan_best_solution.pgm  willow_manhattan_high_quality_solution.pgm
include/pathfinding/: algorithms.hpp  binary_map.hpp  utils.hpp
maps/: fac.pgm  factory.pgm  map_1.pgm  map_2.pgm
results/: .gitignore
src/: algorithms.cpp  binary_map.cpp  main.cpp  utils.cpp
test/: a_star_test.cpp  utils_test.cpp
